Small refactoring email to PDF conversion (#12027)